call obj props and use them

--- a/index.html
+++ b/index.html
@@ -11,6 +11,27 @@
 
   <div class="container">
     <h1 class="title">OOP</h1>
+
+    <div class="people-list">
+      <ul class="firstname-ul">
+        <!-- <li class="list-item">Cica</li>
+        <li class="list-item">Berny</li>
+        <li class="list-item">Szeri</li> -->
+      </ul>
+      <ul class="info-ul">
+        <!-- <li class="list-item">21</li>
+        <li class="list-item">25</li>
+        <li class="list-item">3</li> -->
+      </ul>
+    </div>
+
+    <div class="btn-container">
+      <h2>Info Buttons</h2>
+      <button class="btn lastname-btn selector-btn" data-id="lastname">Last Name</button>
+      <button class="btn age-btn selector-btn" data-id="age">Age</button>
+      <button class="btn salary-btn selector-btn" data-id="salary">Salary</button>
+      <button class="btn athome-btn selector-btn" data-id="athome">At Home</button>
+    </div>
   </div>
   
 
