basic form function done

--- a/index.html
+++ b/index.html
@@ -32,6 +32,25 @@
       <button class="btn salary-btn selector-btn" data-id="salary">Salary</button>
       <button class="btn athome-btn selector-btn" data-id="athome">At Home</button>
     </div>
+
+    <form class="add-person">
+      <div class="form-title"><h3>Add Person</h3></div>
+      <div class="form-input">
+        <p for="firstname">First Name:</p>
+        <input type="text" id="firstname" class="input" maxlength="40" required>
+        <p for="lastname">Last Name:</p>
+        <input type="text" id="lastname" class="input" maxlength="40" required>
+        <p for="age">Age:</p>
+        <input type="number" id="age" class="input" required>
+        <p for="salary">Salary:</p>
+        <input type="number" id="salary" class="input">
+        <p for="athome">Are You At Home?</p>
+        <input type="checkbox" id="athome" class="checkbox">
+        <button type="button" class="btn addperson-btn">Add</button>
+        
+      </div>
+  
+    </form>
   </div>
   
 
